[tool.poetry]
name = "notion_so_tree_visualizer"
version = "0.1.0"
description = "So-so. Small util which visualizes exported databases from notion.so"
authors = ["Dima Boger"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.0"
pygraphviz = "^1.5"
notion = "^0.0.23"
attrs = "^20.3"
click = "^7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
